==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

Changes
=======

Fixes
=====

- Fixed an issue that resulted in an unusable partitioned table when at least
  one column was defined with an explicit ``COLUMNSTORE`` setting.

- Fixed an issue that would cause `count(*)` to return the wrong count when
  applied to a subquery.

- Fixed an issue that could cause ``JOIN`` queries with ``ORDER BY`` to return
  incorrect results.

- Fixed an issue that caused ``COPY TO`` with filters on primary key columns to
  fail.