@@ -21,6 +21,9 @@ Changes
 Fixes
 =====
 
+- Fixed an issue that caused a ``NullPointerException`` using ``ANY`` on
+  timestamp columns.
+
 - Fixed an issue that resulted in an unusable partitioned table when at least
   one column was defined with an explicit ``COLUMNSTORE`` setting.
 
